# mildly-basic-auth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  Justfile  LICENSE-MIT  README.md  index.html
.github/workflows/: ci.yml  release.yml
src/: config.rs  gate.rs  index.html  lib.rs  main.rs  template.html
tests/: integration.rs
