[package]
name = "mildly-basic-auth"
version = "0.1.0"
edition = "2024"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Basic auth with nicer UX."
license = "MIT OR Apache-2.0"
repository = "https://github.com/qrichert/mildly-basic-auth.git"
readme = "README.md"
keywords = ["authentication", "password", "basic-auth", "password-wall", "reverse-proxy"]
categories = ["authentication", "web-programming"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
